GNOME Bugzilla – Bug 711829
matroskademux: assert on division by zero
Last modified: 2013-11-26 11:48:06 UTC
Created attachment 259544 [details] [review] Avoid division by zero assert in gst_matroska_demux_search_pos When doing a seek to position 0 when already positioned on 0 in a mkv with no index (still being recorded), there is an assert in _gst_util_uint64_scale for denom being 0. This is caused by a call from gst_matroska_demux_search_pos where otime – demux->stream_start_time == 0. I have attached the patch that we are using as workaround. This condition occurs very often but not always. Sometimes it looks like the position has moved from 0 and the problem does not happen even though the pipeline was paused directly.
commit b3e0b1dbcaa452c5419b3ad254a0f8cca6167f4a Author: Per x Johansson <perxjoh@axis.com> Date: Thu Oct 24 13:16:42 2013 +0200 matroskademux: Avoid division by zero assert in gst_matroska_demux_search_pos https://bugzilla.gnome.org/show_bug.cgi?id=711829